packages/llvm-minusminus-emulator/llvm-minusminus-emulator-1.0.3.tar.gz/llvm-minusminus-emulator-1.0.3/llvm_emulator/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> top_decs
Rule 2     top_decs -> tdec top_decs
Rule 3     top_decs -> gdec top_decs
Rule 4     top_decs -> fdec top_decs
Rule 5     top_decs -> <empty>
Rule 6     tdec -> PercentID ASSIGN TYPE ty
Rule 7     ty -> VOID
Rule 8     ty -> I1
Rule 9     ty -> I8
Rule 10    ty -> I32
Rule 11    ty -> I64
Rule 12    ty -> ty ASTERIX
Rule 13    ty -> LBRACE ty_list RBRACE
Rule 14    ty -> LBRACK INT ID ty RBRACK
Rule 15    ty -> ty LPAREN ty_list RPAREN
Rule 16    ty -> PercentID
Rule 17    ty_list -> ty
Rule 18    ty_list -> ty COMMA ty_list
Rule 19    ty_list -> <empty>
Rule 20    gdec -> AtID ASSIGN GLOBAL ty ginit
Rule 21    ginit -> NULL
Rule 22    ginit -> AtID
Rule 23    ginit -> INT
Rule 24    ginit -> STRING
Rule 25    ginit -> LBRACK ty_ginit_list RBRACK
Rule 26    ginit -> LBRACE ty_ginit_list RBRACE
Rule 27    ty_ginit_list -> ty ginit
Rule 28    ty_ginit_list -> ty ginit COMMA ty_ginit_list
Rule 29    ty_ginit_list -> <empty>
Rule 30    fdec -> DEFINE ty AtID LPAREN ty_id_list RPAREN LBRACE fbody RBRACE
Rule 31    ty_id_list -> ty PercentID
Rule 32    ty_id_list -> ty PercentID COMMA ty_id_list
Rule 33    ty_id_list -> <empty>
Rule 34    fbody -> block named_block_list
Rule 35    fbody -> block
Rule 36    block -> insns terminator
Rule 37    block -> terminator
Rule 38    insns -> optionally_named_insn
Rule 39    insns -> optionally_named_insn insns
Rule 40    optionally_named_insn -> PercentID ASSIGN insn
Rule 41    optionally_named_insn -> insn
Rule 42    insn -> bop ty operand COMMA operand
Rule 43    insn -> ALLOCA ty
Rule 44    insn -> LOAD ty COMMA ty operand
Rule 45    insn -> STORE ty operand COMMA ty operand
Rule 46    insn -> ICMP cnd ty operand COMMA operand
Rule 47    insn -> CALL ty operand LPAREN ty_operand_list RPAREN
Rule 48    insn -> CALL ty operand LPAREN RPAREN
Rule 49    insn -> BITCAST ty operand TO ty
Rule 50    insn -> GETELEMENTPTR ty COMMA ty operand COMMA ty_operand_list
Rule 51    insn -> GETELEMENTPTR ty COMMA ty operand
Rule 52    insn -> ZEXT ty operand TO ty
Rule 53    insn -> PTRTOINT ty ASTERIX operand TO ty
Rule 54    bop -> ADD
Rule 55    bop -> SUB
Rule 56    bop -> MUL
Rule 57    bop -> SHL
Rule 58    bop -> LSHR
Rule 59    bop -> ASHR
Rule 60    bop -> AND
Rule 61    bop -> OR
Rule 62    bop -> XOR
Rule 63    bop -> SDIV
Rule 64    cnd -> EQ
Rule 65    cnd -> NE
Rule 66    cnd -> SLT
Rule 67    cnd -> SLE
Rule 68    cnd -> SGT
Rule 69    cnd -> SGE
Rule 70    ty_operand_list -> ty operand
Rule 71    ty_operand_list -> ty operand COMMA ty_operand_list
Rule 72    terminator -> RET VOID
Rule 73    terminator -> RET ty operand
Rule 74    terminator -> BR LABEL PercentID
Rule 75    terminator -> BR ty operand COMMA LABEL PercentID COMMA LABEL PercentID
Rule 76    operand -> NULL
Rule 77    operand -> INT
Rule 78    operand -> AtID
Rule 79    operand -> PercentID
Rule 80    named_block_list -> ID COLON block
Rule 81    named_block_list -> ID COLON block named_block_list

Terminals, with rules where they appear

ADD                  : 54
ALLOCA               : 43
AND                  : 60
ASHR                 : 59
ASSIGN               : 6 20 40
ASTERIX              : 12 53
AtID                 : 20 22 30 78
BITCAST              : 49
BR                   : 74 75
CALL                 : 47 48
COLON                : 80 81
COMMA                : 18 28 32 42 44 45 46 50 50 51 71 75 75
DEFINE               : 30
EQ                   : 64
GETELEMENTPTR        : 50 51
GLOBAL               : 20
I1                   : 8
I32                  : 10
I64                  : 11
I8                   : 9
ICMP                 : 46
ID                   : 14 80 81
INT                  : 14 23 77
LABEL                : 74 75 75
LBRACE               : 13 26 30
LBRACK               : 14 25
LOAD                 : 44
LPAREN               : 15 30 47 48
LSHR                 : 58
MUL                  : 56
NE                   : 65
NULL                 : 21 76
OR                   : 61
PTRTOINT             : 53
PercentID            : 6 16 31 32 40 74 75 75 79
RBRACE               : 13 26 30
RBRACK               : 14 25
RET                  : 72 73
RPAREN               : 15 30 47 48
SDIV                 : 63
SGE                  : 69
SGT                  : 68
SHL                  : 57
SLE                  : 67
SLT                  : 66
STORE                : 45
STRING               : 24
SUB                  : 55
TO                   : 49 52 53
TYPE                 : 6
VOID                 : 7 72
XOR                  : 62
ZEXT                 : 52
error                : 

Nonterminals, with rules where they appear

block                : 34 35 80 81
bop                  : 42
cnd                  : 46
fbody                : 30
fdec                 : 4
gdec                 : 3
ginit                : 20 27 28
insn                 : 40 41
insns                : 36 39
named_block_list     : 34 81
operand              : 42 42 44 45 45 46 46 47 48 49 50 51 52 53 70 71 73 75
optionally_named_insn : 38 39
program              : 0
tdec                 : 2
terminator           : 36 37
top_decs             : 1 2 3 4
ty                   : 6 12 14 15 17 18 20 27 28 30 31 32 42 43 44 44 45 45 46 47 48 49 49 50 50 51 51 52 52 53 53 70 71 73 75
ty_ginit_list        : 25 26 28
ty_id_list           : 30 32
ty_list              : 13 15 18
ty_operand_list      : 47 50 71

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . top_decs
    (2) top_decs -> . tdec top_decs
    (3) top_decs -> . gdec top_decs
    (4) top_decs -> . fdec top_decs
    (5) top_decs -> .
    (6) tdec -> . PercentID ASSIGN TYPE ty
    (20) gdec -> . AtID ASSIGN GLOBAL ty ginit
    (30) fdec -> . DEFINE ty AtID LPAREN ty_id_list RPAREN LBRACE fbody RBRACE

    $end            reduce using rule 5 (top_decs -> .)
    PercentID       shift and go to state 6
    AtID            shift and go to state 7
    DEFINE          shift and go to state 8

    program                        shift and go to state 1
    top_decs                       shift and go to state 2
    tdec                           shift and go to state 3
    gdec                           shift and go to state 4
    fdec                           shift and go to state 5

state 1

    (0) S' -> program .



state 2

    (1) program -> top_decs .

    $end            reduce using rule 1 (program -> top_decs .)


state 3

    (2) top_decs -> tdec . top_decs
    (2) top_decs -> . tdec top_decs
    (3) top_decs -> . gdec top_decs
    (4) top_decs -> . fdec top_decs
    (5) top_decs -> .
    (6) tdec -> . PercentID ASSIGN TYPE ty
    (20) gdec -> . AtID ASSIGN GLOBAL ty ginit
    (30) fdec -> . DEFINE ty AtID LPAREN ty_id_list RPAREN LBRACE fbody RBRACE

    $end            reduce using rule 5 (top_decs -> .)
    PercentID       shift and go to state 6
    AtID            shift and go to state 7
    DEFINE          shift and go to state 8

    tdec                           shift and go to state 3
    top_decs                       shift and go to state 9
    gdec                           shift and go to state 4
    fdec                           shift and go to state 5

state 4

    (3) top_decs -> gdec . top_decs
    (2) top_decs -> . tdec top_decs
    (3) top_decs -> . gdec top_decs
    (4) top_decs -> . fdec top_decs
    (5) top_decs -> .
    (6) tdec -> . PercentID ASSIGN TYPE ty
    (20) gdec -> . AtID ASSIGN GLOBAL ty ginit
    (30) fdec -> . DEFINE ty AtID LPAREN ty_id_list RPAREN LBRACE fbody RBRACE

    $end            reduce using rule 5 (top_decs -> .)
    PercentID       shift and go to state 6
    AtID            shift and go to state 7
    DEFINE          shift and go to state 8

    gdec                           shift and go to state 4
    top_decs                       shift and go to state 10
    tdec                           shift and go to state 3
    fdec                           shift and go to state 5

state 5

    (4) top_decs -> fdec . top_decs
    (2) top_decs -> . tdec top_decs
    (3) top_decs -> . gdec top_decs
    (4) top_decs -> . fdec top_decs
    (5) top_decs -> .
    (6) tdec -> . PercentID ASSIGN TYPE ty
    (20) gdec -> . AtID ASSIGN GLOBAL ty ginit
    (30) fdec -> . DEFINE ty AtID LPAREN ty_id_list RPAREN LBRACE fbody RBRACE

    $end            reduce using rule 5 (top_decs -> .)
    PercentID       shift and go to state 6
    AtID            shift and go to state 7
    DEFINE          shift and go to state 8

    fdec                           shift and go to state 5
    top_decs                       shift and go to state 11
    tdec                           shift and go to state 3
    gdec                           shift and go to state 4

state 6

    (6) tdec -> PercentID . ASSIGN TYPE ty

    ASSIGN          shift and go to state 12


state 7

    (20) gdec -> AtID . ASSIGN GLOBAL ty ginit

    ASSIGN          shift and go to state 13


state 8

    (30) fdec -> DEFINE . ty AtID LPAREN ty_id_list RPAREN LBRACE fbody RBRACE
    (7) ty -> . VOID
    (8) ty -> . I1
    (9) ty -> . I8
    (10) ty -> . I32
    (11) ty -> . I64
    (12) ty -> . ty ASTERIX
    (13) ty -> . LBRACE ty_list RBRACE
    (14) ty -> . LBRACK INT ID ty RBRACK
    (15) ty -> . ty LPAREN ty_list RPAREN
    (16) ty -> . PercentID

    VOID            shift and go to state 16
    I1              shift and go to state 17
    I8              shift and go to state 18
    I32             shift and go to state 19
    I64             shift and go to state 20
    LBRACE          shift and go to state 15
    LBRACK          shift and go to state 21
    PercentID       shift and go to state 22

    ty                             shift and go to state 14

state 9

    (2) top_decs -> tdec top_decs .

    $end            reduce using rule 2 (top_decs -> tdec top_decs .)


state 10

    (3) top_decs -> gdec top_decs .

    $end            reduce using rule 3 (top_decs -> gdec top_decs .)


state 11

    (4) top_decs -> fdec top_decs .

    $end            reduce using rule 4 (top_decs -> fdec top_decs .)


state 12

    (6) tdec -> PercentID ASSIGN . TYPE ty

    TYPE            shift and go to state 23


state 13

    (20) gdec -> AtID ASSIGN . GLOBAL ty ginit

    GLOBAL          shift and go to state 24


state 14

    (30) fdec -> DEFINE ty . AtID LPAREN ty_id_list RPAREN LBRACE fbody RBRACE
    (12) ty -> ty . ASTERIX
    (15) ty -> ty . LPAREN ty_list RPAREN

    AtID            shift and go to state 25
    ASTERIX         shift and go to state 27
    LPAREN          shift and go to state 26


state 15

    (13) ty -> LBRACE . ty_list RBRACE
    (17) ty_list -> . ty
    (18) ty_list -> . ty COMMA ty_list
    (19) ty_list -> .
    (7) ty -> . VOID
    (8) ty -> . I1
    (9) ty -> . I8
    (10) ty -> . I32
    (11) ty -> . I64
    (12) ty -> . ty ASTERIX
    (13) ty -> . LBRACE ty_list RBRACE
    (14) ty -> . LBRACK INT ID ty RBRACK
    (15) ty -> . ty LPAREN ty_list RPAREN
    (16) ty -> . PercentID

    RBRACE          reduce using rule 19 (ty_list -> .)
    VOID            shift and go to state 16
    I1              shift and go to state 17
    I8              shift and go to state 18
    I32             shift and go to state 19
    I64             shift and go to state 20
    LBRACE          shift and go to state 15
    LBRACK          shift and go to state 21
    PercentID       shift and go to state 22

    ty_list                        shift and go to state 28
    ty                             shift and go to state 29

state 16

    (7) ty -> VOID .

    AtID            reduce using rule 7 (ty -> VOID .)
    ASTERIX         reduce using rule 7 (ty -> VOID .)
    LPAREN          reduce using rule 7 (ty -> VOID .)
    COMMA           reduce using rule 7 (ty -> VOID .)
    RBRACE          reduce using rule 7 (ty -> VOID .)
    PercentID       reduce using rule 7 (ty -> VOID .)
    DEFINE          reduce using rule 7 (ty -> VOID .)
    $end            reduce using rule 7 (ty -> VOID .)
    NULL            reduce using rule 7 (ty -> VOID .)
    INT             reduce using rule 7 (ty -> VOID .)
    STRING          reduce using rule 7 (ty -> VOID .)
    LBRACK          reduce using rule 7 (ty -> VOID .)
    LBRACE          reduce using rule 7 (ty -> VOID .)
    RPAREN          reduce using rule 7 (ty -> VOID .)
    RBRACK          reduce using rule 7 (ty -> VOID .)
    ALLOCA          reduce using rule 7 (ty -> VOID .)
    LOAD            reduce using rule 7 (ty -> VOID .)
    STORE           reduce using rule 7 (ty -> VOID .)
    ICMP            reduce using rule 7 (ty -> VOID .)
    CALL            reduce using rule 7 (ty -> VOID .)
    BITCAST         reduce using rule 7 (ty -> VOID .)
    GETELEMENTPTR   reduce using rule 7 (ty -> VOID .)
    ZEXT            reduce using rule 7 (ty -> VOID .)
    PTRTOINT        reduce using rule 7 (ty -> VOID .)
    ADD             reduce using rule 7 (ty -> VOID .)
    SUB             reduce using rule 7 (ty -> VOID .)
    MUL             reduce using rule 7 (ty -> VOID .)
    SHL             reduce using rule 7 (ty -> VOID .)
    LSHR            reduce using rule 7 (ty -> VOID .)
    ASHR            reduce using rule 7 (ty -> VOID .)
    AND             reduce using rule 7 (ty -> VOID .)
    OR              reduce using rule 7 (ty -> VOID .)
    XOR             reduce using rule 7 (ty -> VOID .)
    SDIV            reduce using rule 7 (ty -> VOID .)
    RET             reduce using rule 7 (ty -> VOID .)
    BR              reduce using rule 7 (ty -> VOID .)


state 17

    (8) ty -> I1 .

    AtID            reduce using rule 8 (ty -> I1 .)
    ASTERIX         reduce using rule 8 (ty -> I1 .)
    LPAREN          reduce using rule 8 (ty -> I1 .)
    COMMA           reduce using rule 8 (ty -> I1 .)
    RBRACE          reduce using rule 8 (ty -> I1 .)
    PercentID       reduce using rule 8 (ty -> I1 .)
    DEFINE          reduce using rule 8 (ty -> I1 .)
    $end            reduce using rule 8 (ty -> I1 .)
    NULL            reduce using rule 8 (ty -> I1 .)
    INT             reduce using rule 8 (ty -> I1 .)
    STRING          reduce using rule 8 (ty -> I1 .)
    LBRACK          reduce using rule 8 (ty -> I1 .)
    LBRACE          reduce using rule 8 (ty -> I1 .)
    RPAREN          reduce using rule 8 (ty -> I1 .)
    RBRACK          reduce using rule 8 (ty -> I1 .)
    ALLOCA          reduce using rule 8 (ty -> I1 .)
    LOAD            reduce using rule 8 (ty -> I1 .)
    STORE           reduce using rule 8 (ty -> I1 .)
    ICMP            reduce using rule 8 (ty -> I1 .)
    CALL            reduce using rule 8 (ty -> I1 .)
    BITCAST         reduce using rule 8 (ty -> I1 .)
    GETELEMENTPTR   reduce using rule 8 (ty -> I1 .)
    ZEXT            reduce using rule 8 (ty -> I1 .)
    PTRTOINT        reduce using rule 8 (ty -> I1 .)
    ADD             reduce using rule 8 (ty -> I1 .)
    SUB             reduce using rule 8 (ty -> I1 .)
    MUL             reduce using rule 8 (ty -> I1 .)
    SHL             reduce using rule 8 (ty -> I1 .)
    LSHR            reduce using rule 8 (ty -> I1 .)
    ASHR            reduce using rule 8 (ty -> I1 .)
    AND             reduce using rule 8 (ty -> I1 .)
    OR              reduce using rule 8 (ty -> I1 .)
    XOR             reduce using rule 8 (ty -> I1 .)
    SDIV            reduce using rule 8 (ty -> I1 .)
    RET             reduce using rule 8 (ty -> I1 .)
    BR              reduce using rule 8 (ty -> I1 .)


state 18

    (9) ty -> I8 .

    AtID            reduce using rule 9 (ty -> I8 .)
    ASTERIX         reduce using rule 9 (ty -> I8 .)
    LPAREN          reduce using rule 9 (ty -> I8 .)
    COMMA           reduce using rule 9 (ty -> I8 .)
    RBRACE          reduce using rule 9 (ty -> I8 .)
    PercentID       reduce using rule 9 (ty -> I8 .)
    DEFINE          reduce using rule 9 (ty -> I8 .)
    $end            reduce using rule 9 (ty -> I8 .)
    NULL            reduce using rule 9 (ty -> I8 .)
    INT             reduce using rule 9 (ty -> I8 .)
    STRING          reduce using rule 9 (ty -> I8 .)
    LBRACK          reduce using rule 9 (ty -> I8 .)
    LBRACE          reduce using rule 9 (ty -> I8 .)
    RPAREN          reduce using rule 9 (ty -> I8 .)
    RBRACK          reduce using rule 9 (ty -> I8 .)
    ALLOCA          reduce using rule 9 (ty -> I8 .)
    LOAD            reduce using rule 9 (ty -> I8 .)
    STORE           reduce using rule 9 (ty -> I8 .)
    ICMP            reduce using rule 9 (ty -> I8 .)
    CALL            reduce using rule 9 (ty -> I8 .)
    BITCAST         reduce using rule 9 (ty -> I8 .)
    GETELEMENTPTR   reduce using rule 9 (ty -> I8 .)
    ZEXT            reduce using rule 9 (ty -> I8 .)
    PTRTOINT        reduce using rule 9 (ty -> I8 .)
    ADD             reduce using rule 9 (ty -> I8 .)
    SUB             reduce using rule 9 (ty -> I8 .)
    MUL             reduce using rule 9 (ty -> I8 .)
    SHL             reduce using rule 9 (ty -> I8 .)
    LSHR            reduce using rule 9 (ty -> I8 .)
    ASHR            reduce using rule 9 (ty -> I8 .)
    AND             reduce using rule 9 (ty -> I8 .)
    OR              reduce using rule 9 (ty -> I8 .)
    XOR             reduce using rule 9 (ty -> I8 .)
    SDIV            reduce using rule 9 (ty -> I8 .)
    RET             reduce using rule 9 (ty -> I8 .)
    BR              reduce using rule 9 (ty -> I8 .)


state 19

    (10) ty -> I32 .

    AtID            reduce using rule 10 (ty -> I32 .)
    ASTERIX         reduce using rule 10 (ty -> I32 .)
    LPAREN          reduce using rule 10 (ty -> I32 .)
    COMMA           reduce using rule 10 (ty -> I32 .)
    RBRACE          reduce using rule 10 (ty -> I32 .)
    PercentID       reduce using rule 10 (ty -> I32 .)
    DEFINE          reduce using rule 10 (ty -> I32 .)
    $end            reduce using rule 10 (ty -> I32 .)
    NULL            reduce using rule 10 (ty -> I32 .)
    INT             reduce using rule 10 (ty -> I32 .)
    STRING          reduce using rule 10 (ty -> I32 .)
    LBRACK          reduce using rule 10 (ty -> I32 .)
    LBRACE          reduce using rule 10 (ty -> I32 .)
    RPAREN          reduce using rule 10 (ty -> I32 .)
    RBRACK          reduce using rule 10 (ty -> I32 .)
    ALLOCA          reduce using rule 10 (ty -> I32 .)
    LOAD            reduce using rule 10 (ty -> I32 .)
    STORE           reduce using rule 10 (ty -> I32 .)
    ICMP            reduce using rule 10 (ty -> I32 .)
    CALL            reduce using rule 10 (ty -> I32 .)
    BITCAST         reduce using rule 10 (ty -> I32 .)
    GETELEMENTPTR   reduce using rule 10 (ty -> I32 .)
    ZEXT            reduce using rule 10 (ty -> I32 .)
    PTRTOINT        reduce using rule 10 (ty -> I32 .)
    ADD             reduce using rule 10 (ty -> I32 .)
    SUB             reduce using rule 10 (ty -> I32 .)
    MUL             reduce using rule 10 (ty -> I32 .)
    SHL             reduce using rule 10 (ty -> I32 .)
    LSHR            reduce using rule 10 (ty -> I32 .)
    ASHR            reduce using rule 10 (ty -> I32 .)
    AND             reduce using rule 10 (ty -> I32 .)
    OR              reduce using rule 10 (ty -> I32 .)
    XOR             reduce using rule 10 (ty -> I32 .)
    SDIV            reduce using rule 10 (ty -> I32 .)
    RET             reduce using rule 10 (ty -> I32 .)
    BR              reduce using rule 10 (ty -> I32 .)


state 20

    (11) ty -> I64 .

    AtID            reduce using rule 11 (ty -> I64 .)
    ASTERIX         reduce using rule 11 (ty -> I64 .)
    LPAREN          reduce using rule 11 (ty -> I64 .)
    COMMA           reduce using rule 11 (ty -> I64 .)
    RBRACE          reduce using rule 11 (ty -> I64 .)
    PercentID       reduce using rule 11 (ty -> I64 .)
    DEFINE          reduce using rule 11 (ty -> I64 .)
    $end            reduce using rule 11 (ty -> I64 .)
    NULL            reduce using rule 11 (ty -> I64 .)
    INT             reduce using rule 11 (ty -> I64 .)
    STRING          reduce using rule 11 (ty -> I64 .)
    LBRACK          reduce using rule 11 (ty -> I64 .)
    LBRACE          reduce using rule 11 (ty -> I64 .)
    RPAREN          reduce using rule 11 (ty -> I64 .)
    RBRACK          reduce using rule 11 (ty -> I64 .)
    ALLOCA          reduce using rule 11 (ty -> I64 .)
    LOAD            reduce using rule 11 (ty -> I64 .)
    STORE           reduce using rule 11 (ty -> I64 .)
    ICMP            reduce using rule 11 (ty -> I64 .)
    CALL            reduce using rule 11 (ty -> I64 .)
    BITCAST         reduce using rule 11 (ty -> I64 .)
    GETELEMENTPTR   reduce using rule 11 (ty -> I64 .)
    ZEXT            reduce using rule 11 (ty -> I64 .)
    PTRTOINT        reduce using rule 11 (ty -> I64 .)
    ADD             reduce using rule 11 (ty -> I64 .)
    SUB             reduce using rule 11 (ty -> I64 .)
    MUL             reduce using rule 11 (ty -> I64 .)
    SHL             reduce using rule 11 (ty -> I64 .)
    LSHR            reduce using rule 11 (ty -> I64 .)
    ASHR            reduce using rule 11 (ty -> I64 .)
    AND             reduce using rule 11 (ty -> I64 .)
    OR              reduce using rule 11 (ty -> I64 .)
    XOR             reduce using rule 11 (ty -> I64 .)
    SDIV            reduce using rule 11 (ty -> I64 .)
    RET             reduce using rule 11 (ty -> I64 .)
    BR              reduce using rule 11 (ty -> I64 .)


state 21

    (14) ty -> LBRACK . INT ID ty RBRACK

    INT             shift and go to state 30


state 22

    (16) ty -> PercentID .

    AtID            reduce using rule 16 (ty -> PercentID .)
    ASTERIX         reduce using rule 16 (ty -> PercentID .)
    LPAREN          reduce using rule 16 (ty -> PercentID .)
    COMMA           reduce using rule 16 (ty -> PercentID .)
    RBRACE          reduce using rule 16 (ty -> PercentID .)
    PercentID       reduce using rule 16 (ty -> PercentID .)
    DEFINE          reduce using rule 16 (ty -> PercentID .)
    $end            reduce using rule 16 (ty -> PercentID .)
    NULL            reduce using rule 16 (ty -> PercentID .)
    INT             reduce using rule 16 (ty -> PercentID .)
    STRING          reduce using rule 16 (ty -> PercentID .)
    LBRACK          reduce using rule 16 (ty -> PercentID .)
    LBRACE          reduce using rule 16 (ty -> PercentID .)
    RPAREN          reduce using rule 16 (ty -> PercentID .)
    RBRACK          reduce using rule 16 (ty -> PercentID .)
    ALLOCA          reduce using rule 16 (ty -> PercentID .)
    LOAD            reduce using rule 16 (ty -> PercentID .)
    STORE           reduce using rule 16 (ty -> PercentID .)
    ICMP            reduce using rule 16 (ty -> PercentID .)
    CALL            reduce using rule 16 (ty -> PercentID .)
    BITCAST         reduce using rule 16 (ty -> PercentID .)
    GETELEMENTPTR   reduce using rule 16 (ty -> PercentID .)
    ZEXT            reduce using rule 16 (ty -> PercentID .)
    PTRTOINT        reduce using rule 16 (ty -> PercentID .)
    ADD             reduce using rule 16 (ty -> PercentID .)
    SUB             reduce using rule 16 (ty -> PercentID .)
    MUL             reduce using rule 16 (ty -> PercentID .)
    SHL             reduce using rule 16 (ty -> PercentID .)
    LSHR            reduce using rule 16 (ty -> PercentID .)
    ASHR            reduce using rule 16 (ty -> PercentID .)
    AND             reduce using rule 16 (ty -> PercentID .)
    OR              reduce using rule 16 (ty -> PercentID .)
    XOR             reduce using rule 16 (ty -> PercentID .)
    SDIV            reduce using rule 16 (ty -> PercentID .)
    RET             reduce using rule 16 (ty -> PercentID .)
    BR              reduce using rule 16 (ty -> PercentID .)


state 23

    (6) tdec -> PercentID ASSIGN TYPE . ty
    (7) ty -> . VOID
    (8) ty -> . I1
    (9) ty -> . I8
    (10) ty -> . I32
    (11) ty -> . I64
    (12) ty -> . ty ASTERIX
    (13) ty -> . LBRACE ty_list RBRACE
    (14) ty -> . LBRACK INT ID ty RBRACK
    (15) ty -> . ty LPAREN ty_list RPAREN
    (16) ty -> . PercentID

    VOID            shift and go to state 16
    I1              shift and go to state 17
    I8              shift and go to state 18
    I32             shift and go to state 19
    I64             shift and go to state 20
    LBRACE          shift and go to state 15
    LBRACK          shift and go to state 21
    PercentID       shift and go to state 22

    ty                             shift and go to state 31

state 24

    (20) gdec -> AtID ASSIGN GLOBAL . ty ginit
    (7) ty -> . VOID
    (8) ty -> . I1
    (9) ty -> . I8
    (10) ty -> . I32
    (11) ty -> . I64
    (12) ty -> . ty ASTERIX
    (13) ty -> . LBRACE ty_list RBRACE
    (14) ty -> . LBRACK INT ID ty RBRACK
    (15) ty -> . ty LPAREN ty_list RPAREN
    (16) ty -> . PercentID

    VOID            shift and go to state 16
    I1              shift and go to state 17
    I8              shift and go to state 18
    I32             shift and go to state 19
    I64             shift and go to state 20
    LBRACE          shift and go to state 15
    LBRACK          shift and go to state 21
    PercentID       shift and go to state 22

    ty                             shift and go to state 32

state 25

    (30) fdec -> DEFINE ty AtID . LPAREN ty_id_list RPAREN LBRACE fbody RBRACE

    LPAREN          shift and go to state 33


state 26

    (15) ty -> ty LPAREN . ty_list RPAREN
    (17) ty_list -> . ty
    (18) ty_list -> . ty COMMA ty_list
    (19) ty_list -> .
    (7) ty -> . VOID
    (8) ty -> . I1
    (9) ty -> . I8
    (10) ty -> . I32
    (11) ty -> . I64
    (12) ty -> . ty ASTERIX
    (13) ty -> . LBRACE ty_list RBRACE
    (14) ty -> . LBRACK INT ID ty RBRACK
    (15) ty -> . ty LPAREN ty_list RPAREN
    (16) ty -> . PercentID

    RPAREN          reduce using rule 19 (ty_list -> .)
    VOID            shift and go to state 16
    I1              shift and go to state 17
    I8              shift and go to state 18
    I32             shift and go to state 19
    I64             shift and go to state 20
    LBRACE          shift and go to state 15
    LBRACK          shift and go to state 21
    PercentID       shift and go to state 22

    ty                             shift and go to state 29
    ty_list                        shift and go to state 34

state 27

    (12) ty -> ty ASTERIX .

    AtID            reduce using rule 12 (ty -> ty ASTERIX .)
    ASTERIX         reduce using rule 12 (ty -> ty ASTERIX .)
    LPAREN          reduce using rule 12 (ty -> ty ASTERIX .)
    COMMA           reduce using rule 12 (ty -> ty ASTERIX .)
    RBRACE          reduce using rule 12 (ty -> ty ASTERIX .)
    PercentID       reduce using rule 12 (ty -> ty ASTERIX .)
    DEFINE          reduce using rule 12 (ty -> ty ASTERIX .)
    $end            reduce using rule 12 (ty -> ty ASTERIX .)
    NULL            reduce using rule 12 (ty -> ty ASTERIX .)
    INT             reduce using rule 12 (ty -> ty ASTERIX .)
    STRING          reduce using rule 12 (ty -> ty ASTERIX .)
    LBRACK          reduce using rule 12 (ty -> ty ASTERIX .)
    LBRACE          reduce using rule 12 (ty -> ty ASTERIX .)
    RPAREN          reduce using rule 12 (ty -> ty ASTERIX .)
    RBRACK          reduce using rule 12 (ty -> ty ASTERIX .)
    ALLOCA          reduce using rule 12 (ty -> ty ASTERIX .)
    LOAD            reduce using rule 12 (ty -> ty ASTERIX .)
    STORE           reduce using rule 12 (ty -> ty ASTERIX .)
    ICMP            reduce using rule 12 (ty -> ty ASTERIX .)
    CALL            reduce using rule 12 (ty -> ty ASTERIX .)
    BITCAST         reduce using rule 12 (ty -> ty ASTERIX .)
    GETELEMENTPTR   reduce using rule 12 (ty -> ty ASTERIX .)
    ZEXT            reduce using rule 12 (ty -> ty ASTERIX .)
    PTRTOINT        reduce using rule 12 (ty -> ty ASTERIX .)
    ADD             reduce using rule 12 (ty -> ty ASTERIX .)
    SUB             reduce using rule 12 (ty -> ty ASTERIX .)
    MUL             reduce using rule 12 (ty -> ty ASTERIX .)
    SHL             reduce using rule 12 (ty -> ty ASTERIX .)
    LSHR            reduce using rule 12 (ty -> ty ASTERIX .)
    ASHR            reduce using rule 12 (ty -> ty ASTERIX .)
    AND             reduce using rule 12 (ty -> ty ASTERIX .)
    OR              reduce using rule 12 (ty -> ty ASTERIX .)
    XOR             reduce using rule 12 (ty -> ty ASTERIX .)
    SDIV            reduce using rule 12 (ty -> ty ASTERIX .)
    RET             reduce using rule 12 (ty -> ty ASTERIX .)
    BR              reduce using rule 12 (ty -> ty ASTERIX .)


state 28

    (13) ty -> LBRACE ty_list . RBRACE

    RBRACE          shift and go to state 35


state 29

    (17) ty_list -> ty .
    (18) ty_list -> ty . COMMA ty_list
    (12) ty -> ty . ASTERIX
    (15) ty -> ty . LPAREN ty_list RPAREN

    RBRACE          reduce using rule 17 (ty_list -> ty .)
    RPAREN          reduce using rule 17 (ty_list -> ty .)
    COMMA           shift and go to state 36
    ASTERIX         shift and go to state 27
    LPAREN          shift and go to state 26


state 30

    (14) ty -> LBRACK INT . ID ty RBRACK

    ID              shift and go to state 37


state 31

    (6) tdec -> PercentID ASSIGN TYPE ty .
    (12) ty -> ty . ASTERIX
    (15) ty -> ty . LPAREN ty_list RPAREN

    PercentID       reduce using rule 6 (tdec -> PercentID ASSIGN TYPE ty .)
    AtID            reduce using rule 6 (tdec -> PercentID ASSIGN TYPE ty .)
    DEFINE          reduce using rule 6 (tdec -> PercentID ASSIGN TYPE ty .)
    $end            reduce using rule 6 (tdec -> PercentID ASSIGN TYPE ty .)
    ASTERIX         shift and go to state 27
    LPAREN          shift and go to state 26


state 32

    (20) gdec -> AtID ASSIGN GLOBAL ty . ginit
    (12) ty -> ty . ASTERIX
    (15) ty -> ty . LPAREN ty_list RPAREN
    (21) ginit -> . NULL
    (22) ginit -> . AtID
    (23) ginit -> . INT
    (24) ginit -> . STRING
    (25) ginit -> . LBRACK ty_ginit_list RBRACK
    (26) ginit -> . LBRACE ty_ginit_list RBRACE

    ASTERIX         shift and go to state 27
    LPAREN          shift and go to state 26
    NULL            shift and go to state 40
    AtID            shift and go to state 38
    INT             shift and go to state 41
    STRING          shift and go to state 42
    LBRACK          shift and go to state 43
    LBRACE          shift and go to state 44

    ginit                          shift and go to state 39

state 33

    (30) fdec -> DEFINE ty AtID LPAREN . ty_id_list RPAREN LBRACE fbody RBRACE
    (31) ty_id_list -> . ty PercentID
    (32) ty_id_list -> . ty PercentID COMMA ty_id_list
    (33) ty_id_list -> .
    (7) ty -> . VOID
    (8) ty -> . I1
    (9) ty -> . I8
    (10) ty -> . I32
    (11) ty -> . I64
    (12) ty -> . ty ASTERIX
    (13) ty -> . LBRACE ty_list RBRACE
    (14) ty -> . LBRACK INT ID ty RBRACK
    (15) ty -> . ty LPAREN ty_list RPAREN
    (16) ty -> . PercentID
